--- a/energykids/package.json
+++ b/energykids/package.json
@@ -20,6 +20,7 @@
         "build-nolog": "vite build --config vite/config.prod.mjs"
     },
     "devDependencies": {
+        "prettier": "3.4.2",
         "terser": "^5.31.0",
         "typescript": "^5.4.5",
         "vite": "^5.3.1"
